--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.3.6",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.11",
+    "vue-localstorage": "^0.6.2",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1"
   },
